fixed follow routes, settings panel, add items to outfit from any menu

--- a/app/app.css
+++ b/app/app.css
@@ -376,3 +376,12 @@ Button {
     border-color: black;
 }
 
+.settingsOption{
+    padding-left:10;
+}
+
+.settingsOption label{
+    font-size: 20;
+}
+
+
